more understandable parameter description
Signed-off-by: Olga Mogish <olga.mogish@dell.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ on:
         description: 'Release branch name'
         required: true
       prerelease:
-        description: 'Is it minor or GA version'
+        description: 'Is it a prerelease'
         required: true
 
 jobs:
