prerelease parameter type
Signed-off-by: Olga Mogish <olga.mogish@dell.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ on:
       prerelease:
         description: 'Is it a prerelease'
         required: true
+        type: boolean
 
 jobs:
   release:
