[ISSUE-812] Support GA versions in release workflow (#123)
Signed-off-by: Olga Mogish <olga.mogish@dell.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,22 @@ on:
       branch:
         description: 'Release branch name'
         required: true
+      prerelease:
+        description: 'Is it a prerelease'
+        required: true
+        type: boolean
 
 jobs:
-  create_release:
-    name: Create pre-release
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
+          fetch-depth: 0
+          token: ${{ secrets.CSI_WF_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -45,6 +51,17 @@ jobs:
           echo "::set-output name=sha::${{ steps.target.outputs._3 }}"
           app_version=$(awk '{ sub(/.*v/, ""); sub(/-.*/, ""); print }' <<< ${{ github.event.inputs.release_tag }})
           echo "::set-output name=app_version::${app_version}"
+          previous_tag=$(git tag --sort=-creatordate | cut --delimiter " " --fields 1)
+          echo "::set-output name=previous_tag::${previous_tag}"
+
+      - name: Install helm
+        run: |
+          if ! command -v helm &> /dev/null
+          then
+            curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+            chmod 700 get_helm.sh
+            ./get_helm.sh
+          fi
 
       - name: Install python3
         uses: actions/setup-python@v2
@@ -76,10 +93,11 @@ jobs:
           echo "::set-output name=archive_name::csi-baremetal-operator-${{ github.event.inputs.csi_operator_version }}.tgz"
 
       - name: Upload csi-baremetal-operator asset
+        if: ${{ !env.ACT }}
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.asset_1.outputs.archive_name }}
-          path: ./${{ steps.asset_1.outputs.archive_name }}
+          path: ${{ steps.asset_1.outputs.archive_name }}
 
       - name: Create csi-baremetal-deployment asset
         id: asset_2
@@ -88,17 +106,18 @@ jobs:
           echo "::set-output name=archive_name::csi-baremetal-deployment-${{ github.event.inputs.csi_operator_version }}.tgz"
 
       - name: Upload csi-baremetal-deployment asset
+        if: ${{ !env.ACT }}
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.asset_2.outputs.archive_name }}
-          path: ./${{ steps.asset_2.outputs.archive_name }}
+          path: ${{ steps.asset_2.outputs.archive_name }}
 
       - name: Generate changelog
         id: changelog
         uses: mikepenz/release-changelog-builder-action@v1
         with:
           token: ${{ secrets.CSI_WF_TOKEN }}
-          fromTag: ${{ steps.previous_tag.outputs.tag }}
+          fromTag: ${{ steps.vars.outputs.previous_tag }}
           toTag: ${{ github.event.inputs.release_tag }}
           configuration: "./.github/workflows/changelog_config.json"
 
@@ -111,7 +130,7 @@ jobs:
           name: Release ${{ github.event.inputs.release_tag }}
           body: ${{ steps.changelog.outputs.changelog }}
           draft: false
-          prerelease: true
+          prerelease: ${{ github.event.inputs.prerelease }}
           files: |
             ./${{ steps.asset_1.outputs.archive_name }}
             ./${{ steps.asset_2.outputs.archive_name }}
@@ -122,11 +141,13 @@ jobs:
           ref: gh-pages
 
       - name: Download csi-baremetal-operator package
+        if: ${{ !env.ACT }}
         uses: actions/download-artifact@v2
         with:
           name: ${{ steps.asset_1.outputs.archive_name }}
 
       - name: Download csi-baremetal-deployment package
+        if: ${{ !env.ACT }}
         uses: actions/download-artifact@v2
         with:
           name: ${{ steps.asset_2.outputs.archive_name }}
@@ -139,6 +160,7 @@ jobs:
           mv ./index.yaml -f ./docs
 
       - name: Commit and push changes
+        if: ${{ !env.ACT }}
         id: commit_docs
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
