--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -21,3 +21,7 @@ securityContext:
   enable:
   runAsNonRoot:
   runAsUser:
+
+preUpgradeCRDsHooks:
+  repository: csi-baremetal-pre-upgrade-crds
+  version: XXX
