--- a/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
+++ b/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
@@ -103,7 +103,7 @@ metadata:
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-1"
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-delete-policy": post-delete-hook
   labels:
     app.kubernetes.io/name: {{ .Chart.Name }}
     app.kubernetes.io/instance: {{.Release.Name}}
@@ -128,4 +128,4 @@ spec:
           imagePullPolicy: Always
           command: ["/bin/sh", "-c"]
           args:
-          - kubectl -n {{ .Release.Namespace }} replace crd -f ./crds/{{ .Chart.Name }}/*;
+          - kubectl replace crd -f ./crds/{{ .Chart.Name }}/*;
