--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: csi-baremetal
     app.kubernetes.io/managed-by: csi-baremetal-operator
     app.kubernetes.io/version: 1.0.0
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   platform: {{ .Values.platform }}
   globalRegistry: {{ .Values.global.registry }}
