--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -37,9 +37,9 @@ spec:
         - /manager
         args:
         - --enable-leader-election
-        image: {{ if .Values.global.registry }}{{ .Values.global.registry }}/{{ end }}{{ .Values.image.name }}:{{ .Values.image.tag }}
+        image: {{ if .Values.global.registry }}{{ .Values.global.registry }}/{{ end }}{{ .Values.operator.image.name }}:{{ default .Values.image.tag .Values.operator.image.tag }}
         name: manager
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        imagePullPolicy: {{ default .Values.image.pullPolicy .Values.operator.image.pullPolicy }}
         resources:
           limits:
             cpu: {{ .Values.resources.limits.cpu }}
