--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,18 @@ env:
 jobs:
   lint-test:
     name: Validate code and build it
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/dell/csi-baremetal/csi-baremetal-devkit:latest
+      env:
+        EUID: 0
+        EGID: 0
+        USER_NAME: root
+        STDOUT: true
+      volumes:
+        - /root:/root
+        - /tmp:/tmp
+        - /var/run/docker.sock:/var/run/docker.sock
     steps:
     - name: Check out code
       uses: actions/checkout@v2
