update CRD generation test
Signed-off-by: safronovD <danil_safronov@dell.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -86,8 +86,18 @@ jobs:
         make generate-operator-crds
 
     - name: Verify CRD changes
-      uses: tj-actions/verify-changed-files@v5.5
+      uses: tj-actions/verify-changed-files@v9.1
       id: changed_files
       with:
         files: |
           charts/csi-baremetal-operator/crds/*.yaml
+
+    - name: Display changed files
+      if: steps.changed_files.outputs.files_changed == 'true'
+      run: |
+        echo "Changed files: ${{ steps.changed_files.outputs.changed_files }}"
+
+    - name: Fail action when files change
+      if: steps.changed_files.outputs.files_changed == 'true'
+      run: |
+        exit 1
