--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,6 +24,9 @@ jobs:
         - /tmp:/tmp
         - /var/run/docker.sock:/var/run/docker.sock
     steps:
+    - name: Trust My Directory # workaround for https://github.com/actions/checkout/issues/760
+      run: git config --global --add safe.directory /__w/csi-baremetal-operator/csi-baremetal-operator
+
     - name: Check out code
       uses: actions/checkout@v3
 
