Add secondary scheduler feature flag for Openshift 4.10+, create second scheduler extender configmap and secondaryscheduler resourse cluster in csi deployment
Signed-off-by: Shi, Crane <crane.shi@emc.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -19,6 +19,7 @@ spec:
     value: {{.Values.nodeSelector.value}}
   {{- end }}
   sequentialLVGReservation: {{ .Values.feature.sequentialLVGReservation }}
+  secondaryScheduler: {{ .Values.feature.secondaryScheduler }}
   driver:
     controller:
       image:
