Add Secondary Scheduler with CSI Scheduler Extender Config if 2nd Scheduler Used
Signed-off-by: Shi, Crane <crane.shi@emc.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -673,6 +673,8 @@ spec:
                 type: object
               sequentialLVGReservation:
                 type: boolean
+              secondaryScheduler:
+                type: boolean
             required:
             - platform
             - pullPolicy
