--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -55,6 +55,12 @@ rules:
   - schedulers
   verbs:
   - "*"
+- apiGroups:
+  - operator.openshift.io
+  resources:
+  - secondaryschedulers
+  verbs:
+  - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
