--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -98,6 +98,7 @@ jobs:
     - name: Display changed files
       if: steps.changed_files.outputs.files_changed == 'true'
       run: |
+        cat charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
         echo "Changed files: ${{ steps.changed_files.outputs.changed_files }}"
 
     - name: Fail action when files change
