make openshift secondary scheduler image use csi images repo
Signed-off-by: Shi, Crane <crane.shi@emc.com>

--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -128,6 +128,10 @@ spec:
       configMapName: {{ .Values.scheduler.patcher.config_map_name }}
       readinessTimeout: {{ .Values.scheduler.patcher.readinessTimeout }}
     storageProvisioner: {{ .Values.scheduler.provisioner }}
+    openshiftSecondaryScheduler:
+      image:
+        name: {{ .Values.scheduler.openshiftSecondaryScheduler.image.name }}
+        tag: {{ .Values.scheduler.openshiftSecondaryScheduler.image.tag }}
     {{- if .Values.scheduler.securityContext.enable }}
     securityContext:
       enable: {{ .Values.scheduler.securityContext.enable }}
