--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -219,6 +219,10 @@ scheduler:
   # extender will be looking for volumes that should be provisioned
   # by storage class with provided provisioner name
   provisioner: csi-baremetal
+  openshiftSecondaryScheduler:
+    image:
+      name: kube-scheduler
+      tag: v0.23.10
 
 # CSI Operator parameters
 nodeController:
