--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_volumes.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_volumes.yaml
@@ -62,14 +62,10 @@ spec:
         description: Volume is the Schema for the volumes API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -78,6 +74,7 @@ spec:
               CSIStatus:
                 type: string
               Ephemeral:
+                description: inline volumes are not support anymore. need to remove field in the next version
                 type: boolean
               Health:
                 type: string
@@ -101,6 +98,8 @@ spec:
                 format: int64
                 type: integer
               StorageClass:
+                type: string
+              StorageGroup:
                 type: string
               Type:
                 type: string
