update the drives crd for DriveHealthData

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
@@ -90,6 +90,8 @@ spec:
             properties:
               Bay:
                 type: string
+              DriveHealthData:
+                type: string
               Enclosure:
                 type: string
               EncryptionCapable:
