--- a/charts/csi-baremetal-deployment/templates/rbac/scheduler-rbac.yaml
+++ b/charts/csi-baremetal-deployment/templates/rbac/scheduler-rbac.yaml
@@ -22,6 +22,9 @@ rules:
   - apiGroups: [""]
     resources: ["persistentvolumeclaims"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["get", "list", "watch"]
   - apiGroups: ["storage.k8s.io"]
     resources: ["storageclasses"]
     verbs: ["get", "list", "watch"]
