fix crds upgrade error in csi-operator upgrade case
Signed-off-by: Shi, Crane <crane.shi@emc.com>

--- a/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
+++ b/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
@@ -129,4 +129,4 @@ spec:
               memory: {{ .Values.operator.resources.requests.memory }}
           command: ["/bin/sh", "-c"]
           args:
-          - kubectl replace crd -f /crds;
+          - kubectl apply -f /crds;
