--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_storagegroups.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_storagegroups.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
   name: storagegroups.csi-baremetal.dell.com
 spec:
@@ -24,21 +23,14 @@ spec:
       jsonPath: .spec.driveSelector.numberDrivesPerNode
       name: DRIVES_PER_NODE
       type: string
-    - description: Drive Type of StorageGroup's DriveSelector
-      jsonPath: .spec.driveSelector.matchFields.Type
-      name: TYPE
+    - description: Match Fields of StorageGroup's DriveSelector to Select Drives on
+        Field Values
+      jsonPath: .spec.driveSelector.matchFields
+      name: DRIVE_FIELDS
       type: string
-    - description: Drive Slot of StorageGroup's DriveSelector
-      jsonPath: .spec.driveSelector.matchFields.Slot
-      name: SLOT
-      type: string
-    - description: Drive Path of StorageGroup's DriveSelector
-      jsonPath: .spec.driveSelector.matchFields.Path
-      name: PATH
-      type: string
-    - description: Whether StorageGroup's DriveSelector to Select System Drive
-      jsonPath: .spec.driveSelector.matchFields.IsSystem
-      name: SYSTEM
+    - description: status of StorageGroup
+      jsonPath: .status.phase
+      name: STATUS
       type: string
     name: v1
     schema:
@@ -46,10 +38,14 @@ spec:
         description: StorageGroup is the Schema for the StorageGroups API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -66,13 +62,15 @@ spec:
                     type: integer
                 type: object
             type: object
+            x-kubernetes-validations:
+            - message: updates to storagegroup spec are forbidden
+              rule: self == oldSelf
+          status:
+            properties:
+              phase:
+                type: string
+            type: object
         type: object
     served: true
     storage: true
     subresources: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
