[ISSUE-187] upgrade secondary scheduler image from v0.23.10 to v0.26.7 (#188)
* upgrade secondary scheduler image from v0.23.10 to v0.26.7

Signed-off-by: Libin Zhang <Libin_Z@dell.com>

* remove crd file change actions

1. 3rd party actions is not allowed for this repo now.
2. the logic for this check have some issues here, looks it will
   always succeed. as steps.changed_files.outputs.files_changed is
   a string and never can be value 'true'.

Signed-off-by: Libin Zhang <Libin_Z@dell.com>

---------

Signed-off-by: Libin Zhang <Libin_Z@dell.com>
Co-authored-by: Libin Zhang <Libin_Z@dell.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -84,23 +84,23 @@ jobs:
         flags: unittests
         verbose: true
 
-    - name: Generate CRD
-      run: |
-        make generate-operator-crds
-
-    - name: Verify CRD changes
-      uses: tj-actions/verify-changed-files@v9.1
-      id: changed_files
-      with:
-        files: |
-          charts/csi-baremetal-operator/crds/*.yaml
-
-    - name: Display changed files
-      if: steps.changed_files.outputs.files_changed == 'true'
-      run: |
-        echo "Changed files: ${{ steps.changed_files.outputs.changed_files }}"
-
-    - name: Fail action when files change
-      if: steps.changed_files.outputs.files_changed == 'true'
-      run: |
-        exit 1
+#    - name: Generate CRD
+#      run: |
+#        make generate-operator-crds
+#
+#    - name: Verify CRD changes
+#      uses: tj-actions/verify-changed-files@v16.1.1
+#      id: changed_files
+#      with:
+#        files: |
+#          charts/csi-baremetal-operator/crds/*.yaml
+#
+#    - name: Display changed files
+#      if: steps.changed_files.outputs.files_changed == 'true'
+#      run: |
+#        echo "Changed files: ${{ steps.changed_files.outputs.changed_files }}"
+#
+#    - name: Fail action when files change
+#      if: steps.changed_files.outputs.files_changed == 'true'
+#      run: |
+#        exit 1
