--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
 env:
-  go_version: '1.21.3'
+  go_version: '1.16.0'
   golangci_version: '1.37.0'
 jobs:
   lint-test:
@@ -31,7 +31,12 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set go_version variable
-      run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21.3'
+      run: go version
+     
+      #run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
     - name: Load dep cache
       uses: actions/cache@v2
@@ -54,11 +59,11 @@ jobs:
     - name: Get dependencies
       run:  go mod download
         
- #   - name: Lint code
- #     run: GOGC=300 make lint-code
+   # - name: Lint code
+   #   run: GOGC=300 make lint-code
 
-  #  - name: Lint chart
-  #    run: make lint-operator-chart
+   # - name: Lint chart
+   #   run: make lint-operator-chart
 
     - name: Build binary
       run: |
