--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
 env:
-  go_version: '1.16.0'
+  go_version: '1.21.3'
   golangci_version: '1.37.0'
 jobs:
   lint-test:
@@ -34,8 +34,9 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
-     
-      #run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
+
+    - name: Set go_version variable2 
+      run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
     - name: Load dep cache
       uses: actions/cache@v2
