--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,12 +30,17 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Set go_version variable
+    - name: Set GOPROXY
+        env:
+          GOPROXY: https://proxy.golang.org,direct
+        run: go env -w GOPROXY=$GOPROXY
+
+    - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
 
-    - name: Set go_version variable2 
+    - name: Set go_version variable 
       run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
     - name: Load dep cache
