turning on lint

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -64,11 +64,17 @@ jobs:
     - name: Get dependencies
       run:  go mod download
         
-   # - name: Lint code
-   #   run: GOGC=300 make lint-code
+    - name: Lint code
+  #    run: GOGC=300 make lint-code
+      uses: golangci/golangci-lint-action@v3
+      with:
+          # Require: The version of golangci-lint to use.
+          # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
+          # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
+        version: v1.54
 
-   # - name: Lint chart
-   #   run: make lint-operator-chart
+    - name: Lint chart
+      run: make lint-operator-chart
 
     - name: Build binary
       run: |
