--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,7 +36,7 @@ jobs:
       run: go env -w GOPROXY=$GOPROXY
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
 
@@ -64,8 +64,8 @@ jobs:
     - name: Get dependencies
       run:  go mod download
         
-    - name: Lint code
-      run: GOGC=300 make lint-code
+  #  - name: Lint code
+  #    run: GOGC=300 make lint-code
 
     - name: Lint chart
       run: make lint-operator-chart
