--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,12 +39,15 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
-          
+
+    - name: Set go_version variable 
+      run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
+
     - name: Get dependencies
       run:  go mod download
         
-  #  - name: Lint code
-  #    run: GOGC=300 make lint-code
+    - name: Lint code
+      run: GOGC=300 make lint-code
 
     - name: Lint chart
       run: make lint-operator-chart
