--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -34,15 +34,36 @@ jobs:
       env:
         GOPROXY: https://proxy.golang.org,direct
       run: go env -w GOPROXY=$GOPROXY
+      
+    - name: Set GOROOT
+      run: export "GOROOT=$(go env GOROOT)
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v2
       with:
         go-version: '1.21.3'
 
     - name: Set go_version variable 
       run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
+    - name: Load dep cache
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: go-dep-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+        restore-keys: go-dep-${{ env.go_version }}-
+          
+    - name: Load build and linter cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/.cache/golangci-lint
+        key: go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/pkg') }}
+        restore-keys: |
+          go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+          go-build-${{ env.go_version }}-
+        
     - name: Get dependencies
       run:  go mod download
         
