--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,7 +36,7 @@ jobs:
       run: go env -w GOPROXY=$GOPROXY
       
     - name: Set GOROOT
-      run: export "GOROOT=$(go env GOROOT)
+      run: export GOROOT=$(go env GOROOT)
 
     - name: Set up Go
       uses: actions/setup-go@v2
